2011-11-24  Sancho Lerena <slerena@artica.es>

	* include/styles/integria.css: Some changes in styles.

	* include/functions_calendar.php: Smaller calendar.

	* include/languages/es.mo: Updated compiled strings, need to update
	from Launchad the .po file

	* images/arrow.gif: New image for bullet icon.

	* general/footer.php,
	general/header.php: Updated files for better style/layout.

2011-11-24  Sergio Martin <sergio.martin@artica.es>

	* operation/projects/task_detail.php: Fixed the task creation for 
	a project manager without higher ACLs (only project manager of the
	task project)

2011-11-23  Sergio Martin <sergio.martin@artica.es>

	* operation/projects/people_manager.php
	operation/users/user_spare_workunit.php
	operation/download/browse.php
	operation/user_report/monthly.php
	operation/user_report/report_monthly.php: Fixed several
	bugs like selection in monthly report, user default input in
	spare workunit and file releases checks to show only
	files that not in file release.

2011-11-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php
	include/config_process.php
	index.php
	operation/side_menu.php: Fixed menu visibility when
	login and configure MINIMAL mode in the people section
	to see only auditory

2011-11-22  Sergio Martin <sergio.martin@artica.es>

	* integria_dbdata.sql
	godmode/setup/setup_auth.php: Fixed default auth mode in
	setup editor and in default data sql script

2011-11-22  Sergio Martin <sergio.martin@artica.es>

	* operation/side_menu.php: Add MINIMAL mode to side menu
	visibility with the same (for moment) of LIMITED

2011-11-22  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	include/functions.php: Added MINIMAL mode to menu visibility

2011-11-22  Sancho Lerena <slerena@artica.es>

	* Updated language (Spanish)

2011-11-14  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js
	operation/incidents/incident_tracking.php: Improved the incidents 